feat: update Navbar positioning to fixed and comment out margin-top in main for layout adjustment

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ button:focus-visible {
 
 /* Main Content Wrapper */
 main {
-  margin-top: 80px; /* Same as navbar height */
+  /* margin-top: 80px; Same as navbar height */
   flex: 1;
   width: 100%;
 }
